Fixed bottom links and text alignment

--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -105,8 +105,8 @@
 }
 
 .bottom-modal-text {
+    text-align: center;
     font-weight: 600;
-    margin-right: 25%;
     margin-top: 5%;
 } 
 
